@@ -2,9 +2,10 @@ jalv (1.4.5) unstable;
 
   * Show newly saved presets in the preset menu
   * Generate Qt moc nonsense at build time for broader compatibility
-  * Update for latest LV2 Atom Object simplifications.
+  * Update for latest LV2 Atom Object simplifications
+  * Set port pretty names via new Jack metadata API
 
- -- David Robillard <d@drobilla.net>  Sun, 12 Jan 2014 18:50:11 -0500
+ -- David Robillard <d@drobilla.net>  Sun, 06 Apr 2014 02:03:55 -0400
 
 jalv (1.4.4) stable;
 
